--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             </div>
         </div>
     </div>
+    <div id="error">
+    </div>
     <script src="js/main.js"></script>
 </body>
 
